// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetypeHeading renders component 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/frtq/conservative_white.png"
      />
      <h2
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading, [object Object]",
          }
        }
      />
    </div>
    <p>
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </p>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/Upholder.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/Upholder.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/Upholder.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders component in third person 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/frtq/conservative_white.png"
      />
      <h2
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading_third_person, [object Object]",
          }
        }
      />
    </div>
    <p>
      Maybe just hire qualified candidates
    </p>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/Upholder.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/Upholder.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/Upholder.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders component without badge 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <h2
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading, [object Object]",
          }
        }
      />
    </div>
    <p>
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </p>
  </div>
  <div
    className="meaning"
  >
    <video
      controls={true}
      crossOrigin="anonymous"
      playsInline={true}
      poster="https://cdn.traitify.com/content/archetype-videos/Upholder.jpg"
    >
      <source
        src="https://cdn.traitify.com/content/archetype-videos/Upholder.mp4"
        type="video/mp4"
      />
      <track
        kind="captions"
        src="https://cdn.traitify.com/content/archetype-videos/Upholder.vtt"
      />
    </video>
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders explanation text as fallback for video 1`] = `
<div
  className="container"
>
  <div
    className="details"
  >
    <div>
      <img
        alt="Cohort"
        src="https://cdn.traitify.com/frtq/conservative_white.png"
      />
      <h2
        dangerouslySetInnerHTML={
          Object {
            "__html": "personality_heading, [object Object]",
          }
        }
      />
    </div>
    <p>
      You can get lost in your work, appreciating the value of devoting expertise to the execution of a task. You are at ease working in your own way, on your own terms.
    </p>
  </div>
  <div
    className="meaning"
  >
    <p
      dangerouslySetInnerHTML={
        Object {
          "__html": "archetype_description_html, [object Object]",
        }
      }
    />
  </div>
</div>
`;

exports[`PersonalityArchetypeHeading renders nothing if deck not ready 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if disabled 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if no archetype 1`] = `null`;

exports[`PersonalityArchetypeHeading renders nothing if results not ready 1`] = `null`;
